@@ -1,3 +1,9 @@
+2023-12-19T04:08:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7257235018 # 4374
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2939 / 0 2941 / +0 +2
+
 2023-12-19T00:31:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7255647403 # 4373
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
